--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash.isequal": "^4.5.0",
     "react": "18.2.0",
     "react-native": "0.72.1",
+    "react-native-date-picker": "^4.2.13",
     "react-native-keyboard-accessory": "^0.1.16",
     "react-native-mask-input": "^1.2.3",
     "react-native-svg": "^13.10.0"
