--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-date-picker": "^4.2.13",
+    "react-native-device-info": "^10.8.0",
     "react-native-keyboard-accessory": "^0.1.16",
     "react-native-mask-input": "^1.2.3",
     "react-native-svg": "^13.10.0"
@@ -26,6 +27,7 @@
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.7",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/jest": "^29.5.3",
     "@types/metro-config": "^0.76.3",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
